formatting and word changes

--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,14 @@
+@article{emery2004mentality,
+  title={The mentality of crows: convergent evolution of intelligence in corvids and apes},
+  author={Emery, Nathan J and Clayton, Nicola S},
+  journal={science},
+  volume={306},
+  number={5703},
+  pages={1903--1907},
+  year={2004},
+  publisher={American Association for the Advancement of Science}
+}
+
 @phdthesis{mccune2018cognition,
   title={Cognition gone wild: a test of the social intelligence hypothesis in wild birds},
   author={McCune, Kelsey Brenna},
