--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -141,26 +141,26 @@ Predictions are the same as in the Research Question: Q2 section, except the com
 **Figure 3.** The template feeder experimental design (Figure 7) tailored to the great-tailed grackle research question.
 
 
-### Jays
+### Scrub-jays (*Aphelocoma californica* & *A. coerulescens*)
 
-**Background:** Jay species in the genus *Aphelocoma* exhibit a diversity of social systems and success in colonizing suburban and urban areas. California scrub-jays (*A. californica*, hereafter "CASJ"), a singular, monogamous breeder, are increasing in abundance, expanding their range size and are highly successful in natural, suburban, and urban areas [@blair1996land, @curry2017california]. In contrast, the Florida scrub-jay (*A. coerulescens*; hereafter "FLSJ") is a threatened species endemic and range-restricted to xeric oak scrub habitat in Florida [@woolfenden1996florida]. 
+**Background:** Jay species in the genus *Aphelocoma* exhibit a diversity of social systems and success in colonizing suburban and urban areas. California scrub-jays (*A. californica*, hereafter "CASJ"), a singular, monogamous breeder, are increasing in abundance, expanding their range size and are highly successful in natural, suburban, and urban areas [@blair1996land; @curry2017california]. In contrast, the Florida scrub-jay (*A. coerulescens*; hereafter "FLSJ") is a threatened species, endemic and range-restricted to xeric oak scrub habitat in Florida [@woolfenden1996florida]. 
 
-Both species forage primarily on mast (acorns, hazelnuts, etc.) that they cache throughout their territory to eat all year. But they are also opportunistic omnivores and specifically need high-fat and high-protein arthropods to feed to nestlings and fledglings [@curry2017california]. Nesting and foraging substrate can be drastically different in human modified environments compared to natural areas [@tuomainen2011behavioural], but it is unknown whether suburban and urban jays persist through behavioral adaptations. FLSJ have colonized suburban habitats, however suburban populations of FLSJ steadily decline after colonization events [Bowman pers. comm.]. This is potentially due to suboptimal habitat resulting from fire suppression [@woolfenden1996florida], higher rates of brood reduction through nestling starvation [@shawkey2004why] and the lack of nutritionally complete prey items [@shawkey2004why] in suburban habitats. It is possible that behavioral flexibility in habitat use and foraging breadth underlies the ability of some jays to persist in human-dominated areas. 
+Both species forage primarily on mast (acorns, hazelnuts, etc.) that they cache throughout their territory, which makes it available to eat year-round. They are also opportunistic omnivores and specifically need high-fat and high-protein arthropods to feed to nestlings and fledglings [@curry2017california]. Nesting and foraging substrates can be drastically different in human modified environments compared to natural areas [@tuomainen2011behavioural], and it is unknown whether suburban and urban jays are able to persist in these environments through behavioral adjustments. FLSJ have colonized suburban habitats, however suburban populations of FLSJ steadily decline after colonization events (Bowman pers. comm.). This is potentially due to the presence of suboptimal habitat resulting from fire suppression [@woolfenden1996florida], higher rates of brood reduction through nestling starvation [@shawkey2004why], and the lack of nutritionally complete prey items [@shawkey2004why] in suburban habitats. It is possible that behavioral flexibility in habitat use and foraging breadth underlies the ability of some FLSJ to persist in human-dominated areas. 
 
-We aim to compare behavioral flexibility within species, between suburban and natural populations to determine if variation in flexibility relates to variation in persistence. Subsequently we will compare flexibility between species to determine whether this trait is related to the greater persistence of CASJ in human-dominated areas. Lastly, we will test whether manipulating flexibility increases the foraging breadth and reproductive success of jays in human modified environments. Manipulating flexibility of a subset of individuals has the potential to affect the population because previous research demonstrates that both species have the capacity to use foraging information discovered by others to flexibly change their behavior [social learning; @mccune2018cognition, @midford2000social].
+We aim to compare behavioral flexibility within species, between suburban and natural populations to determine whether variation in flexibility relates to variation in presence in these habitats. Subsequently we will compare flexibility between species to determine whether this trait is related to the greater presence of CASJ in human-dominated areas. Lastly, we will test whether manipulating flexibility increases the foraging breadth and reproductive success of jays in human modified environments. Manipulating the flexibility of a subset of individuals has the potential to affect the population because previous research demonstrates that both species have the capacity to use foraging information discovered by others (social learning) to flexibly change their behavior [@mccune2018cognition; @midford2000social].
 
 
 **J.Q1: Do jay populations in human modified areas differ in baseline behavioral flexibility compared to populations in natural areas?**
 
- - **Prediction 1.1:** If suburban jays are *more* flexible than jays in natural areas, this implies that flexibility is related to the ability to persist in human modified environments where spatial and temporal heterogeneity of resources is high. 
+ - **Prediction 1.1:** If suburban jays are *more* flexible than jays in natural areas, this implies that flexibility is related to the ability to occupy human modified environments where spatial and temporal heterogeneity of resources is high. 
  - **Prediction 1.2:** If suburban jays are *less* flexible than jays in natural areas, this implies that human modification of the environment has led to less spatial and temporal heterogeneity of resources. For example, the prevalence of bird feeders in suburban areas leads to consistently available food.
- - **Prediction 1.3:** If suburban jays are *equally* flexible as jays in natural areas, this implies that additional behavioral traits [i.e. boldness; @lapiedra2017urbanization] facilitate success in human modified environments
+ - **Prediction 1.3:** If suburban jays are *equally* flexible as jays in natural areas, this implies that additional behavioral traits [e.g. boldness, @lapiedra2017urbanization] may facilitate success in human modified environments
  
 **J.Q2: Are CASJ more behaviorally flexible than FLSJ in general?**
 
  - **Prediction 2.1:** If CASJ are *more* flexible than FLSJ, this may explain the range expansion and greater success of CASJ in human modified environments.
- - **Prediction 2.2:** If CASJ are *less* flexible than FLSJ, it implies that flexibility is not related to persistence in human modified environments and that behavioral flexibility is instead related to a different, unknown social or environmental characteristic.
- - **Prediction 2.3:** If CASJ and FLSJ are *equally* flexible, then flexibility is not related to persistence in human modified environments and the level of flexibility is potentially an evolutionary conserved trait from the *Aphelocoma* common ancestor.
+ - **Prediction 2.2:** If CASJ are *less* flexible than FLSJ, it implies that flexibility is not related to success in human modified environments and that flexibility may instead be related to a different, unknown social or environmental characteristic.
+ - **Prediction 2.3:** If CASJ and FLSJ are *equally* flexible, then flexibility is not related to success in human modified environments and the level of flexibility is potentially an evolutionary conserved trait from the *Aphelocoma* common ancestor.
  
 **J.Q3: Does manipulating behavioral flexibility affect success of CASJ and FLSJ in human modified environments?**
 
@@ -240,7 +240,7 @@ cohen.kappa(data[,c(3,5)], w=NULL,n.obs=NULL,alpha=.05,levels=NULL)
 
 ## **Design 2 - Feeder experiment** 
 
-Half of the individuals (manipulated group) are exposed to opaque feeders that open at irregular times until they meet the passing criterion, while the other half (control group) are exposed to opaque feeders that open regularly (Figure 7). The irregular opening times represents environmental heterogeneity, and those individuals who have enough experience in this heterogeneous environment through multiple exposures are able to learn to improve their flexibility (latency to approach the right feeder at the right time - i.e., when it is open). In both designs, both groups are habituated to the open feeders filled with food until at least half of the minimum sample size has visited more than 50% of the feeders, and data are collected on success/survival measures either before and after the flexibility intervention or only after the intervention (depending on feasibility and how the study design needs to be tailored for each population). **KELSEY do we want to say anything about all of the "piloting" we're doing in GTGR in space use?** The social learning component is conducted during this experiment.
+Half of the individuals (manipulated group) are exposed to opaque feeders that open at irregular times until they meet the passing criterion, while the other half (control group) are exposed to opaque feeders that open regularly (Figure 7). The irregular opening times represents environmental heterogeneity, and those individuals who have enough experience in this heterogeneous environment through multiple exposures are able to learn to improve their flexibility (latency to approach the right feeder at the right time - i.e., when it is open). In both designs, both groups are habituated to the open feeders filled with food until at least half of the minimum sample size has visited more than 50% of the feeders, and data are collected on success/survival measures either before and after the flexibility intervention or only after the intervention (depending on feasibility and how the study design needs to be tailored for each population). The social learning component is conducted during this experiment.
 
 &nbsp;
 
