--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,23 @@
+@article{laland1996social,
+  title={Is social learning always locally adaptive?},
+  author={Laland, Kevin N and GALEF, BG},
+  journal={Animal Behaviour},
+  volume={52},
+  pages={637--644},
+  year={1996}
+}
+
+@article{whitehead2010conserving,
+  title={Conserving and managing animals that learn socially and share cultures},
+  author={Whitehead, Hal},
+  journal={Learning \& Behavior},
+  volume={38},
+  number={3},
+  pages={329--336},
+  year={2010},
+  publisher={Springer}
+}
+
 @article{emery2004mentality,
   title={The mentality of crows: convergent evolution of intelligence in corvids and apes},
   author={Emery, Nathan J and Clayton, Nicola S},
