--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -42,7 +42,6 @@ Open... ![](logoOpenAccess.png){width=5%} access ![](logoOpenCode.png){width=5%}
 library(knitr)
 knitr::opts_chunk$set(tidy.opts=list(width.cutoff=60),tidy=TRUE) 
 #Make code wrap text so it doesn't go off the page when Knitting to PDF
-
 knitr::opts_chunk$set(echo = TRUE) 
 #sets global options to display code along with the results https://exeter-data-analytics.github.io/LitProg/r-markdown.html
 ```
@@ -113,9 +112,7 @@ This investigation asks whether flexibility can be increased by experimentally i
 
 ```{r designgtgrtest, eval=TRUE, warning=FALSE, results='asis', echo=TRUE, include=TRUE}
 d <- read.csv(url("https://raw.githubusercontent.com/ManyIndividuals/ManyIndividuals/main/Files/rrs/mi1studydesignGTGR.csv"), header=F, sep=",", stringsAsFactors=F) 
-
 colnames(d) <- c("Question","Hypothesis","Sampling plan","Analysis plan","Rationale for deciding the sensitivity of the test for confirming or disconfirming the hypothesis","Interpretation given different outcomes","Theory that could be shown wrong by the outcomes")
-
 library(kableExtra)
 knitr::kable(d)
 #kable_styling(full_width = T, position = "left")
@@ -145,7 +142,7 @@ Predictions are the same as in the Research Question: Q2 section, except the com
 
 **Background:** Jay species in the genus *Aphelocoma* exhibit a diversity of social systems and success in colonizing suburban and urban areas. California scrub-jays (*A. californica*, hereafter "CASJ"), a singular, monogamous breeder, are increasing in abundance, expanding their range size and are highly successful in natural, suburban, and urban areas [@blair1996land; @curry2017california]. In contrast, the Florida scrub-jay (*A. coerulescens*; hereafter "FLSJ") is a threatened species, endemic and range-restricted to xeric oak scrub habitat in Florida [@woolfenden1996florida]. 
 
-Both species forage primarily on mast (acorns, hazelnuts, etc.) that they cache throughout their territory, which makes it available to eat year-round. They are also opportunistic omnivores and specifically need high-fat and high-protein arthropods to feed to nestlings and fledglings [@curry2017california]. Nesting and foraging substrates can be drastically different in human modified environments compared to natural areas [@tuomainen2011behavioural], and it is unknown whether suburban and urban jays are able to persist in these environments through behavioral adjustments. FLSJ have colonized suburban habitats, however suburban populations of FLSJ steadily decline after colonization events (Bowman pers. comm.). This is potentially due to the presence of suboptimal habitat resulting from fire suppression [@woolfenden1996florida], higher rates of brood reduction through nestling starvation [@shawkey2004why], and the lack of nutritionally complete prey items [@shawkey2004why] in suburban habitats. It is possible that behavioral flexibility in habitat use and foraging breadth underlies the ability of some FLSJ to persist in human-dominated areas. 
+Both species forage primarily on mast (acorns, hazelnuts, etc.) that they cache throughout their territory, which makes it available to eat year-round. They are also opportunistic omnivores and specifically need high-fat and high-protein arthropods to feed to nestlings and fledglings [@curry2017california]. Nesting and foraging substrates can be drastically different in human modified environments compared to natural areas [@tuomainen2011behavioural], and it is unknown whether suburban and urban jays are able to persist in these environments through behavioral adjustments. FLSJ have colonized suburban habitats, however suburban populations of FLSJ steadily decline after colonization events (Bowman pers. comm.). This is potentially due to the presence of suboptimal habitat resulting from fire suppression [@woolfenden1996florida], higher rates of brood reduction through nestling starvation [@shawkey2004brood], and the lack of nutritionally complete prey items [@shawkey2004brood] in suburban habitats. It is possible that behavioral flexibility in habitat use and foraging breadth underlies the ability of some FLSJ to persist in human-dominated areas. 
 
 We aim to compare behavioral flexibility within species, between suburban and natural populations to determine whether variation in flexibility relates to variation in presence in these habitats. Subsequently we will compare flexibility between species to determine whether this trait is related to the greater presence of CASJ in human-dominated areas. Lastly, we will test whether manipulating flexibility increases the foraging breadth and reproductive success of jays in human modified environments. Manipulating the flexibility of a subset of individuals has the potential to affect the population because previous research demonstrates that both species have the capacity to use foraging information discovered by others (social learning) to flexibly change their behavior [@mccune2018cognition; @midford2000social].
 
@@ -160,7 +157,7 @@ We aim to compare behavioral flexibility within species, between suburban and na
 
  - **Prediction 2.1:** If CASJ are *more* flexible than FLSJ, this may explain the range expansion and greater success of CASJ in human modified environments.
  - **Prediction 2.2:** If CASJ are *less* flexible than FLSJ, it implies that flexibility is not related to success in human modified environments and that flexibility may instead be related to a different, unknown social or environmental characteristic.
- - **Prediction 2.3:** If CASJ and FLSJ are *equally* flexible, then flexibility is not related to success in human modified environments and the level of flexibility is potentially an evolutionary conserved trait from the *Aphelocoma* common ancestor.
+ - **Prediction 2.3:** If CASJ and FLSJ are *equally* flexible, then flexibility is not related to success in human modified environments and the level of flexibility is potentially an evolutionary conserved trait from the *Aphelocoma* common ancestor [@emery2004mentality].
  
 **J.Q3: Does manipulating behavioral flexibility affect success of CASJ and FLSJ in human modified environments?**
 
@@ -219,7 +216,6 @@ We conduct interobserver reliability by having hypothesis-blind video coders cod
 
 ```{r iorRev, eval=FALSE, warning=FALSE, results='asis', echo=TRUE, include=TRUE}
 library(irr) #ICC package
-
 # did video coder pass interobserver reliability training? 
 data <- read.csv("", header = TRUE, sep = ",", stringsAsFactors = FALSE)
 head(data)  #Check to make sure it looks right
@@ -227,7 +223,6 @@ head(data)  #Check to make sure it looks right
 data[,3] #coder 1 (live coder)
 data[,5] #coder 2 (video coder)
 cohen.kappa(data[,c(3,5)], w=NULL,n.obs=NULL,alpha=.05,levels=NULL) 
-
 # video coder score for 20% of videos =  
 data <- read.csv("", header = TRUE, sep = ",", stringsAsFactors = FALSE)
 head(data)  #Check to make sure it looks right
