made small change to test, added 'or threats' to prediction 1

--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -79,7 +79,7 @@ This investigation asks whether flexibility can be increased by experimentally i
 
 ## Q1: Can behavioral flexibility in individuals be increased by increasing environmental heterogeneity? If so, does increased flexibility help individuals survive in human modified environments? 
 
-**Prediction 1:** Flexibility can be increased in individuals and such an increase **improves the likelihood of survival in human modified environments**. This would indicate that the abilities involved in tracking changing resources in the environment are the same as or related to the abilities involved in surviving in human modified environments. It would also indicate that flexibility is trainable and that such training could be a useful conservation tool for threatened and endangered species. 
+**Prediction 1:** Flexibility can be increased in individuals and such an increase **improves the likelihood of survival in human modified environments**. This would indicate that the abilities involved in tracking changing resources or threats in the environment are the same as or related to the abilities involved in surviving in human modified environments. It would also indicate that flexibility is trainable and that such training could be a useful conservation tool for threatened and endangered species. 
 
 **Prediction 1 alternative 1:** Flexibility can be increased in individuals, but such an increase **does not improve the likelihood of survival** in human modified environments. This would indicate that species associated with human modified environments form this association for reasons other than their flexibility, and that threatened species are likely not very successful in human modified environments for reasons unrelated to their ability to change their behavior with changing circumstances.
 
