added references to bib and rmd

--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,62 @@
+@article{Robertson2016birdstatus,
+author = {Robertson, Hugh A and Baird, Karen and Dowding, John E. and Elliott, Graeme P. and Hitchmough, Rodney A and Miskelly, Colin M. and McArthur, Nikki and O'Donnell, Colin F J and Sagar, Paul M. and Scofield, R. Paul and Taylor, Graeme A.},
+journal = {New Zealand Threat Classification Series 19},
+pages = {26 p.},
+title = {{Conservation status of New Zealand birds 2016}},
+url = {http://www.doc.govt.nz/upload/documents/science-and-technical/nztcs4entire.pdf},
+year = {2016}
+}
+
+
+@article{Saunders2001mainlandisland,
+author = {Saunders, A. and Norton, D. A.},
+doi = {10.1016/S0006-3207(00)00192-0},
+journal = {Biological Conservation},
+number = {1},
+pages = {109--119},
+title = {{Ecological restoration at Mainland Islands in New Zealand}},
+volume = {99},
+year = {2001}
+}
+
+@article{Shaw2020longterm,
+author = {Shaw, Rachael C. and Harvey, Annette},
+doi = {https://doi.org/10.1098/rsbl.2019.0912},
+journal = {Biology Letters},
+pages = {20190912},
+title = {{Long term memory for a learned behaviour in a wild bird}},
+volume = {16},
+year = {2020}
+}
+
+@article{Miskelly2005zealandia,
+author = {Miskelly, Colin and Empson, Raewyn and Wright, Ken},
+journal = {Notornis},
+number = {1},
+pages = {21--26},
+title = {{Forest birds recolonising Wellington}},
+volume = {52},
+year = {2005}
+}
+
+@techreport{Shaw2018halomonitoring,
+address = {Wellington},
+author = {Shaw, Rachael C. and Harvey, Annette},
+institution = {Wellington City Council},
+pages = {1--15},
+title = {{Toutouwai population monitoring and community engagement in WCC Reserves adjoining Zealandia , 2017-­2018. A report submitted to the Wellington City Council}},
+year = {2018}
+}
+
+@article{Richard2010dispersal,
+author = {Richard, Yvan and Armstrong, Doug P.},
+journal = {Journal of Applied Ecology},
+pages = {603--610},
+title = {{Cost distance modelling of landscape connectivity and gap-crossing ability using radio-tracking data}},
+volume = {47},
+year = {2010}
+}
+
 @article{laland1996social,
   title={Is social learning always locally adaptive?},
   author={Laland, Kevin N and GALEF, BG},
